--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@popperjs/core": "^2.11.2",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.4",
