--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@popperjs/core": "^2.11.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
